Fix arrow alignment

--- a/_styles/slideshow.scss
+++ b/_styles/slideshow.scss
@@ -40,11 +40,11 @@
 }
 /* Position the "next button" to the right */
 .slideshow > .slideshow-container > .next {
-    right: 0;
+    right: 16px;
     border-radius: 3px 0 0 3px;
 }
 .slideshow > .slideshow-container > .prev {
-    left: 0;
+    left: 16px;
     border-radius: 3px 0 0 3px;
 }
 /* On hover, add a black background color with a little bit see-through */
